<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">好货商城</string>
    <string name="coin_name">DBM</string>
    <string name="fg_ucenter_vip">申请VIP</string>
    <string name="fg_ucenter_list">收益清单</string>
    <string name="exchange_record">兑换记录</string>
    <string name="help_center">帮助中心</string>
    <string name="fg_ucenter_contact">联系我们</string>
    <string name="fg_ucenter_setting">系统设置</string>
    <string name="fg_ucenter_logout">退出登录</string>
    <string name="setting_more_language">多语言</string>
    <string name="setting_alter_pwd">修改密码</string>
    <string name="export_ks">导出私钥</string>
    <string name="export_keystore">导出keystore</string>
    <string name="export_wallet">导出钱包</string>
    <string name="about_us">关于我们</string>
    <string name="about_use_agreement">用户协议</string>
    <string name="about_service_agreement">服务协议</string>
    <string name="about_us_version">软件版本</string>
    <string name="wallet_name">钱包名称</string>
    <string name="wallet_address">钱包地址</string>
    <string name="wallet_address_new">钱包地址:</string>
    <string name="add_wallet_type">币种</string>
    <string name="transaction_pwd">交易密码</string>
    <string name="confirm_tran_pwd">确认交易密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="botton_complete">完成</string>
    <string name="alter_title">修改密码</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="pwd_confirm">确认密码</string>
    <string name="coin_receive">收款</string>
    <string name="coin_pay">付款</string>
    <string name="coin_exchange">兑换</string>
    <string name="coin_recent_transaction">最近交易</string>
    <string name="contact_title">联系人</string>
    <string name="contact_us_title">联系我们</string>
    <string name="contactus_wechat">微信联系</string>
    <string name="create_wallet_title">创建钱包</string>
    <string name="password">密码</string>
    <string name="password_tip">密码提示信息（可不填）</string>
    <string name="create_wallet">创建钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="exchange_charge">手续费</string>
    <string name="exchange_total">最大兑换数量：</string>
    <string name="number">数量</string>
    <string name="exchange_number">兑换数量</string>
    <string name="charge_number">总兑换币数量：0</string>
    <string name="submit">提交</string>
    <string name="next">下一步</string>
    <string name="export_success">导出成功</string>
    <string name="user_name">用户名</string>
    <string name="keystore">私钥 </string>
    <string name="keystore_new">私钥: </string>
    <string name="save_screenshot">保存截图 </string>
    <string name="copy">复制至粘贴板 </string>
    <string name="questions">常见问题 </string>
    <string name="mnemonic_tip">请将它准确地抄在纸上，并存在一个安全的地方</string>
    <string name="mnemonic_backups">备份助记词</string>
    <string name="system_notice">消息中心</string>
    <string name="business_partner">商业伙伴 </string>
    <string name="error_pwd">密码输入有误</string>
    <string name="my_share">我的邀请码：</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_suc">注册成功</string>
    <string name="pool">矿池</string>
    <string name="pool_total">矿池币总数量</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="pay_wallet">付款钱包</string>
    <string name="receiver">收款方</string>
    <string name="receiver2">接收方</string>
    <string name="confirm_pay">确认付款</string>
    <string name="fasongqianbao">发送钱包</string>
    <string name="beizhu">备注</string>
    <string name="beizhu2">备注（选填）</string>
    <string name="pay_money">付款金额</string>
    <string name="money">金额</string>
    <string name="pay_success">付款成功</string>
    <string name="start_record">启动记录</string>
    <string name="no_record">暂无记录</string>
    <string name="profit_total">总收益</string>
    <string name="cur_price">(实时价格)</string>
    <string name="today_value">今日值：</string>
    <string name="total_value">伙伴总值：</string>
    <string name="zhineng">今日智能收益</string>
    <string name="lianjie">今日链接收益</string>
    <string name="gaoguan">今日高管佣金</string>
    <string name="jiaoyi">今日交易佣金</string>
    <string name="receive_wallet">收款钱包</string>
    <string name="zxing">点击二维码可复制接收地址</string>
    <string name="transalate_record">交易记录</string>
    <string name="transalate_details">交易详情</string>
    <string name="transalate_success">交易成功</string>
    <string name="shaixuan">筛选</string>
    <string name="nodata">暂无内容</string>
    <string name="apply">申请</string>
    <string name="watting">请稍后...</string>
    <string name="bank_money">银行资产</string>
    <string name="start_import">开始导入</string>
    <string name="agree">注册即同意</string>
    <string name="agrees">服务及隐私条款</string>
    <string name="password_et">请输入密码</string>
    <string name="password_confirm_et">请输入确认密码</string>
    <string name="password_pwd_tip_et">请输入密码提示（可不填）</string>
    <string name="pwd_tip">不少于8位字符，建议混合大小写字母、数字、特殊字符</string>
    <string name="wallet_mn_et">请输入助记词，单词间用空格隔开</string>
    <string name="keystore_et">请输入明文私钥</string>
    <string name="import_tip">直接复制粘贴钱包 keystore 文件内容至输入框。</string>
    <string name="zichanmingcheng">资产名称</string>
    <string name="shishijiage">实时价格</string>
    <string name="zhangfudiefu">涨幅跌幅</string>
    <string name="emails">邮箱地址</string>
    <string name="login_pwd">登录密码</string>
    <string name="confirm_login_pwd">确认登录密码</string>
    <string name="yaoqingma">邀请码（必填）</string>
    <string name="cancle">取消</string>
    <string name="password_type">密码类型:</string>
    <string name="password_type_new">密码类型</string>
    <string name="login_password">登录密码</string>
    <string name="choose_to_change_your_password">选择修改密码</string>
    <string name="assets">资产</string>
    <string name="determine">确定</string>
    <string name="delete_contact">删除联系人</string>
    <string name="make_sure_to_delete_the_contact">确定删除联系人?</string>
    <string name="mailbox">邮箱</string>
    <string name="registration_agreement">注册协议</string>
    <string name="created_please_wait">创建中，请稍后...</string>
    <string name="two_password_entries_are_inconsistent">两次密码输入不一致</string>
    <string name="exceeded_convertible_quantity">已超出最大可兑换数量</string>
    <string name="balance">余额</string>
    <string name="balance_new">余额:</string>
    <string name="handling_fee">手续费:</string>
    <string name="total_number_of_coins_exchanged">总兑换币数量:</string>
    <string name="network_connection_error">网络连接错误</string>
    <string name="permission_denied">没有权限无法保存截图呦~</string>
    <string name="wallet_name_new">钱包名称:</string>
    <string name="mnemonic">助记词</string>
    <string name="official_wallet">官方钱包</string>
    <string name="successfully_imported">导入成功</string>
    <string name="processing">处理中...</string>
    <string name="jump_over">跳过</string>
    <string name="experience_now">立即体验</string>
    <string name="press_again_to_exit_the_program">再按一次退出程序</string>
    <string name="download_progress">下载进度</string>
    <string name="please_click_on_the_mnemonic_in_order">请按顺序点击助记词，确认本助记词正确</string>
    <string name="mnemonic_recovery_wallet">助记词用户恢复钱包或重置钱包密码，将它准确的抄写在纸上，并存放在只有你知道的安全的地方。</string>
    <string name="backup_private_key">备份私钥</string>
    <string name="private_key_new">私钥:</string>
    <string name="payment_address">付款地址</string>
    <string name="collection_address">收款地址</string>
    <string name="miner_fee">矿工费</string>
    <string name="transaction_hour">交易时间</string>
    <string name="close_the_mining_pool">关闭矿池</string>
    <string name="no_permission_to_scan">没有权限无法扫描呦~</string>
    <string name="please_enter_the_payment_amount">请输入付款金额</string>
    <string name="insufficient_balance">余额不足</string>
    <string name="total_partner_value">伙伴总值:</string>
    <string name="dbm_real_time_price">DBM实时价格</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="english">English</string>
    <string name="choose_language">选择语言</string>
    <string name="transaction_hash">交易哈希</string>
    <string name="block">区块</string>
    <string name="successful_payment">收款成功</string>
    <string name="all">全部</string>
    <string name="application_quota">申请额度</string>
    <string name="application">申请</string>
    <string name="diamond_vip">钻石VIP</string>
    <string name="apply_to_cancel_vip">申请取消VIP</string>
    <string name="ordinary_vip">普通VIP</string>
    <string name="diamond_vip_application">钻石VIP申请中</string>
    <string name="application_canceled">撤销申请</string>
    <string name="ordinary_vip_application">普通VIP申请中</string>
    <string name="amount">额度</string>
    <string name="please_select_the_application_quota">请选择申请额度</string>
    <string name="dbm_balance">DBM余额:</string>
    <string name="currency_list">币种列表</string>
    <string name="total_assets">总资产(¥)</string>
    <string name="not_logged_in">未登录</string>
    <string name="loading_data">正在加载数据</string>
    <string name="network_request_data_is_abnormal">网络请求数据出现异常</string>
    <string name="take_photo">拍照</string>
    <string name="choose_from_album">从相册选择</string>
    <string name="forget_pwd_new">忘记密码?</string>
    <string name="mine_balance">矿池余额:</string>
    <string name="receipt">收款</string>
    <string name="mine_pool_has_been_opened">已开启矿池</string>
    <string name="mine_pool_not_opened">未开启矿池</string>
    <string name="successful_redemption">兑换成功</string>
    <string name="add_contact">添加联系人</string>
    <string name="no_data">暂无数据...</string>
    <string name="update_immediately">立即更新</string>
    <string name="talk_about_it_later">以后再说</string>
    <string name="dui">兑</string>
    <string name="transaction_failed">交易失败</string>
    <string name="processing_new">处理中</string>
    <string name="please_enter_the_transaction_password">请输入交易密码</string>
    <string name="please_confirm_the_transaction_password">请确认交易密码</string>
    <string name="wallet_name_et">请输入钱包名称</string>
    <string name="peplication_failed">复制失败，请检查网络</string>
    <string name="to_convert_the_currency_amount">请输入要兑换币种数量</string>
    <string name="exit_successfully">退出成功</string>
    <string name="keystore_pwd">请输入keystore导出密码</string>
    <string name="keystore_content">请输入keystore内容</string>
    <string name="password_cannot_be_less_than_digits">密码不能少于8位</string>
    <string name="please_input_the_email_address">请输入邮箱地址</string>
    <string name="please_enter_your_password">请输入登录密码</string>
    <string name="please_confirm_the_login_password">请确认登录密码</string>
    <string name="please_enter_the_invitation_code">请输入邀请码</string>
    <string name="please_enter_your_wallet_password">请输入钱包密码</string>
    <string name="please_confirm_the_wallet_password">请确认钱包密码</string>
    <string name="please_enter_a_mnemonic">请输入助记词</string>
    <string name="screenshot_saved_to_album">截图已经保存至相册</string>
    <string name="copied_to_clipboard">已复制至剪贴板</string>
    <string name="the_address_has_been_copied_to_the_clipboard">地址已复制至剪贴板</string>
    <string name="backup_success">备份成功！请牢记助记词！</string>
    <string name="forgot_password_reminder">忘记密码提示</string>
    <string name="forgot_password_reminder_content">请您退出该页面，点击个人主页---系统设置---修改密码，然后选择密码类型为“交易密码”，即可进行密码修改。</string>
    <string name="this_can_not_be_undone">请慎重，此操作无法撤销</string>
    <string name="string_input_pwd_et">请输入密码</string>
    <string name="shopping_cart">购物车</string>
    <string name="management">管理</string>
    <string name="your_shopping_cart_is_empty">您的购物车空空如也，快快选购吧</string>
    <string name="select_all">全选</string>
    <string name="he_ji">合计：0USDB</string>
    <string name="jie_suan">结算(0)</string>
    <string name="my_cash_back">我的返现</string>
    <string name="cashback_instructions">返现说明</string>
    <string name="to_return_the_dbm">待返现DBM:</string>
    <string name="dbn_has_been_returned">已返现DBM:</string>
    <string name="cash_back_points">已返现积分:</string>
    <string name="point_balance">积分余额:</string>
    <string name="today_is_link_back">今日链接返现:</string>
    <string name="cash_back_record">返现记录:</string>
</resources>