<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translate"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/root_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_radio_arround_white_10"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10">

        <TextView
            android:id="@+id/dialog_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/string_input_pwd_et"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/transaction_pwd"
            android:textSize="@dimen/textSize16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:background="@drawable/shape_grayline_bottom">

            <com.tymall.view.ClearEditText
                android:id="@+id/dialog_password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp10"
                android:layout_toLeftOf="@+id/cb_confirm_password"
                android:background="@drawable/shape_grayline_bottom"
                android:hint="@string/password_et"
                android:inputType="textPassword"
                android:maxLength="21"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/textSize16sp" />

            <CheckBox
                android:id="@+id/cb_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp10"
                android:button="@drawable/checkbox_password_selector"
                android:paddingRight="@dimen/dp2" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_delete_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp6"
            android:text="@string/this_can_not_be_undone"
            android:textColor="@color/red_color"
            android:textSize="@dimen/dp12"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp15"
            android:gravity="center_vertical|right"
            android:text="@string/forget_pwd_new"
            android:textColor="@color/blue"
            android:textSize="@dimen/dp12"
            android:visibility="visible" />

        <Button
            android:id="@+id/dialog_password_submit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginRight="@dimen/dp15"
            android:background="@drawable/shape_radio_btn"
            android:text="@string/determine"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize16sp" />

        <TextView
            android:id="@+id/dialog_password_cancle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp15"
            android:gravity="center"
            android:text="@string/cancle"
            android:textSize="@dimen/textSize16sp" />
    </LinearLayout>
</LinearLayout>