<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_radio_arround_white_10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:gravity="center"
            android:text="@string/forgot_password_reminder"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/dp16"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:lineSpacingExtra="@dimen/dp10"
            android:text="@string/forgot_password_reminder_content"
            android:textColor="@color/black_deep"
            android:textSize="@dimen/dp14" />

        <Button
            android:id="@+id/bt_determine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_marginBottom="@dimen/dp30"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginTop="@dimen/dp30"
            android:background="@drawable/shape_radio_btn"
            android:text="@string/determine"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dp16" />
    </LinearLayout>

</LinearLayout>